07-full-integration/app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web
  namespace: production
  labels:
    app: sample-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sample-web
